Functioning CLI and FrontEnd
